# youtube-video-converter

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  app.py  errors.py  local_conversion.py  paths.py  ui.py  urls.py
app/downloaders/: __init__.py  base.py  registry.py  ytdlp_facade.py  ytdlp_provider.py
src/app/: __init__.py  __main__.py  app.py
src/app/adapters/: __init__.py  cookie_store.py  local_converter.py  ytdlp_downloader.py
src/app/application/: jobs.py
src/app/domain/: errors.py  models.py
src/app/ports/: downloader.py
src/app/ui/: cli.py  progress.py  tk_app.py
src/app/utils/: logging.py
